--- a/main.html
+++ b/main.html
@@ -1,16 +1,45 @@
 <!DOCTYPE html>
-
-<html>
-
+<html lang="en">
 <head>
-	<link rel="stylesheet" href="styles.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <style>
+        .main-container{
+            background-color: #f5f5f5;
+            padding: 20px;
+        }
+        .first-child{
+            border: 2px solid black;
+            padding: 20px;
+            background-color: white;
+        }
+        .Second-child{
+            border: 2px solid black;
+            padding: 20px;
+            background-color: aqua;
+        }
+        .author{
+            text-align: right;
+            font-style: italic;
+        }
+    </style>
 </head>
-
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
-
+    <div class="main-container">
+        <h1>TESTIMONIALS</h1>
+        <div class="first-child">
+            <p>The product is amazing</p>
+            <p class="author">-Blaze</p>
+        </div>
+        <div>
+            <p></p>
+        </div>
+        <div class="Second-child">
+            <p>Suberb writing sensei</p>
+            <p class="author">-Gamesense</p>
+        </div>
+    </div>
+    
 </body>
-
 </html>
